--- a/TesteVTBSolutionsUm/TesteVTBSolutionsUm.csproj
+++ b/TesteVTBSolutionsUm/TesteVTBSolutionsUm.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="IgniteUI.Blazor.Trial" Version="22.2.65" />
     <PackageReference Include="MatBlazor" Version="2.8.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.14" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.14" PrivateAssets="all" />
